# calculon

./: CMakeLists.txt  LICENSE  README.md  genNoise.py  genNoisySin.py  main.cpp  plot.py
filters/: apply.cpp  filters.cpp  filters.hpp
utils/: files.cpp  stopwatch.cpp  utils.hpp
utils/cnpy/: cnpy.cpp
